<resources>

    <!-- All strings to do with App meta data -->
    <string name="app_name">Gapp Project</string>
    <string name="action_settings">Settings</string>

    <!--All strings to do with main activity-->
    <string name="Welcome">Welcome to the Gapp project</string>
    <string name="new_event">New Event</string>
    <string name="inspire">#GetInspired</string>
    <string name="title_activity_inspire">Inspire Activity</string>

    <!--All strings to do with Inspire activity -->
    <string name="i_sales_title">Sales</string>
    <string name="i_services_title">Services</string>
    <string name="i_trust_grant_title">Trust/Grant</string>
    <string name="i_entertainment_title">Entertainment</string>
    <string name="title_activity_sales">SalesActivity</string>

    <!--All strings to do with the Sales activity-->
    <string name="s_new_event_title">New Event</string>
    <string name="title_activity_database_test">DatabaseTest</string>
    <string name="title_activity_services">ServicesActivity</string>
    <string name="title_activity_entertainment">EntertainmentActivity</string>
    <string name="title_activity_data_entry">DataEntryActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="activityName"></string>
    <string name="taskNumber">Task no.</string>
    <string name="taskDescription">Description</string>
    <string name="timeLimit">Time Limit</string>
    <string name="taskCheck">Completed</string>
    <string name="title_activity_job">JobActivity</string>



    <!-- Job Activity Strings -->
    <string name="Job_Title">Job Title</string>
    <string name="Current_Step">Current Step</string>
    <string name="title_activity_preparation_activty">Preparation Activty</string>
    <string name="title_activity_preparation_phase2">PreparationPhase2</string>

</resources>
