<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_inspire" tools:context="com.example.gapp.InspireActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/i_sales_title"
        android:id="@+id/sales_title"
        android:onClick="onSalesClick"
        android:layout_marginTop="59dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/i_services_title"
        android:id="@+id/services_title"
        android:onClick="onServicesClick"
        android:layout_below="@+id/sales_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/i_trust_grant_title"
        android:id="@+id/i_trust_grant_title"
        android:onClick="onTGClick"
        android:layout_below="@+id/services_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/i_entertainment_title"
        android:id="@+id/i_entertainment_title"
        android:onClick="onEntertainmentClick"
        android:layout_below="@+id/i_trust_grant_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp" />

</RelativeLayout>
